[project]
name = "compml"
version = "0.0.2"
authors = [
  { name="Mehmet Oktay Ozsoy", email="mehmet.ozsoy@synnada.ai" },
]
description = "Composite ML Library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/synnada-ai/compml"
Issues = "https://github.com/synnada-ai/compml/issues"